--- a/options.html
+++ b/options.html
@@ -61,7 +61,7 @@
 -->
 <div id="formbuttons">
     <button class="save">Save</button>
-    <button class="reset">Reset</button>
+    <!-- <button class="reset">Reset Defaults</button> -->
 </div>
     </form>
   </body>
